source/externs/X11/extensions/XI2proto.d

module externs.X11.extensions.XI2proto;
@nogc nothrow:
extern(C): __gshared:

private template HasVersion(string versionId) {
	mixin("version("~versionId~") {enum HasVersion = true;} else {enum HasVersion = false;}");
}
/*
 * Copyright © 2009 Red Hat, Inc.
 *
 * Permission is hereby granted, free of charge, to any person obtaining a
 * copy of this software and associated documentation files (the "Software"),
 * to deal in the Software without restriction, including without limitation
 * the rights to use, copy, modify, merge, publish, distribute, sublicense,
 * and/or sell copies of the Software, and to permit persons to whom the
 * Software is furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice (including the next
 * paragraph) shall be included in all copies or substantial portions of the
 * Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL
 * THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
 * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
 * DEALINGS IN THE SOFTWARE.
 *
 */

/* Conventions for this file:
 * Names:
 * structs: always typedef'd, prefixed with xXI, CamelCase
 * struct members: lower_case_with_underscores
 *        Exceptions: reqType, ReqType, repType, RepType, sequenceNumber are
 *        named as such for historical reasons.
 * request opcodes: X_XIRequestName as CamelCase
 * defines: defines used in client applications must go in XI2.h
 *          defines used only in protocol handling: XISOMENAME
 *
 * Data types: unless there is a historical name for a datatype (e.g.
 * Window), use stdint types specifying the size of the datatype.
 * historical data type names must be defined and undefined at the top and
 * end of the file.
 *
 * General:
 * spaces, not tabs.
 * structs specific to a request or reply added before the request
 *      definition. structs used in more than one request, reply or event
 *      appended to the common structs section before the definition of the
 *      first request.
 * members of structs vertically aligned on column 16 if datatypes permit.
 *      otherwise aligned on next available 8n column.
 */

/**
 * Protocol definitions for the XI2 protocol.
 * This file should not be included by clients that merely use XI2, but do not
 * need the wire protocol. Such clients should include XI2.h, or the matching
 * header from the library.
 *
 */
 
import externs.X11.Xproto;
public import externs.X11.X;
public import externs.X11.extensions.XI2;
public import core.stdc.stdint;
import externs.X11.Xmd;

/* make sure types have right sizes for protocol structures. */
// alias Window =  uint;
// alias Time =    uint;
// alias Atom =    uint;
// alias Cursor =  uint;
alias Barrier = uint;

/**
 * XI2 Request opcodes
 */
enum X_XIQueryPointer =                40;
enum X_XIWarpPointer =                 41;
enum X_XIChangeCursor =                42;
enum X_XIChangeHierarchy =             43;
enum X_XISetClientPointer =            44;
enum X_XIGetClientPointer =            45;
enum X_XISelectEvents =                46;
enum X_XIQueryVersion =                47;
enum X_XIQueryDevice =                 48;
enum X_XISetFocus =                    49;
enum X_XIGetFocus =                    50;
enum X_XIGrabDevice =                  51;
enum X_XIUngrabDevice =                52;
enum X_XIAllowEvents =                 53;
enum X_XIPassiveGrabDevice =           54;
enum X_XIPassiveUngrabDevice =         55;
enum X_XIListProperties =              56;
enum X_XIChangeProperty =              57;
enum X_XIDeleteProperty =              58;
enum X_XIGetProperty =                 59;
enum X_XIGetSelectedEvents =           60;
enum X_XIBarrierReleasePointer =       61;

/** Number of XI requests */
enum XI2REQUESTS = (X_XIBarrierReleasePointer - X_XIQueryPointer + 1);
/** Number of XI2 events */
enum XI2EVENTS =   (XI_LASTEVENT + 1);

/*************************************************************************************
 *                                                                                   *
 *                               COMMON STRUCTS                                      *
 *                                                                                   *
 *************************************************************************************/
/** Fixed point 16.16 */
alias FP1616 = int;

/** Fixed point 32.32 */
struct FP3232 {
    int integral;
    uint frac;
}

/**
 * Struct to describe a device.
 *
 * For a MasterPointer or a MasterKeyboard, 'attachment' specifies the
 * paired master device.
 * For a SlaveKeyboard or SlavePointer, 'attachment' specifies the master
 * device this device is attached to.
 * For a FloatingSlave, 'attachment' is undefined.
 */
struct xXIDeviceInfo {
    ushort deviceid;
    ushort use;            /**< ::XIMasterPointer, ::XIMasterKeyboard,
                                     ::XISlavePointer, ::XISlaveKeyboard,
                                     ::XIFloatingSlave */
    ushort attachment;     /**< Current attachment or pairing.*/
    ushort num_classes;    /**< Number of classes following this struct. */
    ushort name_len;       /**< Length of name in bytes. */
    ubyte enabled;        /**< TRUE if device is enabled. */
    ubyte pad;
}

/**
 * Default template for a device class.
 * A device class is equivalent to a device's capabilities. Multiple classes
 * are supported per device.
 */
struct xXIAnyInfo {
    ushort type;           /**< One of *class */
    ushort length;         /**< Length in 4 byte units */
    ushort sourceid;       /**< source device for this class */
    ushort pad;
}

/**
 * Denotes button capability on a device.
 * Struct is followed by a button bit-mask (padded to four byte chunks) and
 * then num_buttons * Atom that names the buttons in the device-native setup
 * (i.e.  ignoring button mappings).
 */
struct xXIButtonInfo {
    ushort type;           /**< Always ButtonClass */
    ushort length;         /**< Length in 4 byte units */
    ushort sourceid;       /**< source device for this class */
    ushort num_buttons;    /**< Number of buttons provided */
}

/**
 * Denotes key capability on a device.
 * Struct is followed by num_keys * CARD32 that lists the keycodes available
 * on the device.
 */
struct xXIKeyInfo {
    ushort type;           /**< Always KeyClass */
    ushort length;         /**< Length in 4 byte units */
    ushort sourceid;       /**< source device for this class */
    ushort num_keycodes;   /**< Number of keys provided */
}

/**
 * Denotes an valuator capability on a device.
 * One XIValuatorInfo describes exactly one valuator (axis) on the device.
 */
struct xXIValuatorInfo {
    ushort type;           /**< Always ValuatorClass       */
    ushort length;         /**< Length in 4 byte units */
    ushort sourceid;       /**< source device for this class */
    ushort number;         /**< Valuator number            */
    Atom label;          /**< Axis label                 */
    FP3232 min;            /**< Min value                  */
    FP3232 max;            /**< Max value                  */
    FP3232 value;          /**< Last published value       */
    uint resolution;     /**< Resolutions in units/m     */
    ubyte mode;           /**< ModeRelative or ModeAbsolute */
    ubyte pad1;
    ushort pad2;
}

/***
 * Denotes a scroll valuator on a device.
 * One XIScrollInfo describes exactly one scroll valuator that must have a
 * XIValuatorInfo struct.
 */
struct xXIScrollInfo {
    ushort type;           /**< Always ValuatorClass         */
    ushort length;         /**< Length in 4 byte units       */
    ushort sourceid;       /**< source device for this class */
    ushort number;         /**< Valuator number              */
    ushort scroll_type;    /**< ::XIScrollTypeVertical, ::XIScrollTypeHorizontal */
    ushort pad0;
    uint flags;          /**< ::XIScrollFlagEmulate, ::XIScrollFlagPreferred   */
    FP3232 increment;      /**< Increment for one unit of scrolling              */
}

/**
 * Denotes multitouch capability on a device.
 */
struct xXITouchInfo {
    ushort type;           /**< Always TouchClass */
    ushort length;         /**< Length in 4 byte units */
    ushort sourceid;       /**< source device for this class */
    ubyte mode;           /**< DirectTouch or DependentTouch */
    ubyte num_touches;    /**< Maximum number of touches (0==unlimited) */
}

/**
 * Denotes touchpad gesture capability on a device.
 */
struct xXIGestureInfo {
    ushort type;           /**< Always GestureClass */
    ushort length;         /**< Length in 4 byte units */
    ushort sourceid;       /**< source device for this class */
    ubyte num_touches;    /**< Maximum number of touches gesture supports (0==unlimited) */
    ubyte pad0;
}

/**
 * Used to select for events on a given window.
 * Struct is followed by (mask_len * CARD8), with each bit set representing
 * the event mask for the given type. A mask bit represents an event type if
 * (mask == (1 << type)).
 */
struct xXIEventMask {
    ushort deviceid;       /**< Device id to select for        */
    ushort mask_len;       /**< Length of mask in 4 byte units */
}

/**
 * XKB modifier information.
 * The effective modifier is a binary mask of base, latched, and locked
 * modifiers.
 */
struct xXIModifierInfo {
    uint base_mods;              /**< Logically pressed modifiers */
    uint latched_mods;           /**< Logically latched modifiers */
    uint locked_mods;            /**< Logically locked modifiers */
    uint effective_mods;         /**< Effective modifiers */
}

/**
 * XKB group information.
 * The effective group is the mathematical sum of base, latched, and locked
 * group after group wrapping is taken into account.
 */
struct xXIGroupInfo {
    ubyte base_group;             /**< Logically "pressed" group */
    ubyte latched_group;          /**< Logically latched group */
    ubyte locked_group;           /**< Logically locked group */
    ubyte effective_group;        /**< Effective group */
}


/*************************************************************************************
 *                                                                                   *
 *                                   REQUESTS                                        *
 *                                                                                   *
 *************************************************************************************/

/**
 * Query the server for the supported X Input extension version.
 */

struct xXIQueryVersionReq {
    ubyte reqType;                /**< Input extension major code */
    ubyte ReqType;                /**< Always ::X_XIQueryVersion */
    ushort length;                 /**< Length in 4 byte units */
    ushort major_version;
    ushort minor_version;
}
enum sz_xXIQueryVersionReq =                     8;

struct xXIQueryVersionReply {
    ubyte repType;                /**< ::X_Reply */
    ubyte RepType;                /**< Always ::X_XIQueryVersion */
    ushort sequenceNumber;
    uint length;
    ushort major_version;
    ushort minor_version;
    uint pad1;
    uint pad2;
    uint pad3;
    uint pad4;
    uint pad5;
}
enum sz_xXIQueryVersionReply =             32;

/**
 * Query the server for information about a specific device or all input
 * devices.
 */
struct xXIQueryDeviceReq {
    ubyte reqType;                /**< Input extension major code */
    ubyte ReqType;                /**< Always ::X_XIQueryDevice */
    ushort length;                 /**< Length in 4 byte units */
    ushort deviceid;
    ushort pad;
}
